--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,22 @@ Options -indexes +FollowSymlinks
   RewriteRule ^([a-zA-Z0-9_\-\/]+)(\.html)?(/)?$ index.php?p=$1  [L]
 
 </IfModule>
+
+<IfModule mod_expires.c>
+  ExpiresActive On
+  ExpiresDefault "access plus 1 month"
+  ExpiresByType image/x-icon "access plus 1 year"
+  ExpiresByType image/gif "access plus 1 month"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/jpeg "access plus 1 month"
+  ExpiresByType text/css "access plus 1 year"
+  ExpiresByType application/javascript "access plus 1 year"
+</IfModule>
+
+<IfModule mod_headers.c>
+Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
+Header set Content-Security-Policy "script-src 'self' https://www.zaosoula.fr"
+Header always set X-FRAME-OPTIONS "DENY"
+Header always set X-XSS-Protection "1; mode=block"
+Header always set X-Content-Type-Options "nosniff"
+</IfModule>
